# meshmagick

./: AUTHORS  CMakeLists.txt  Makefile.am  MeshMagick.sln  MeshMagick.vcproj  MeshMagick_vc2008.sln  MeshMagick_vc2008.vcproj  README  README.md  TEMPLATE  TODO  bootstrap  configure.in  meshmagick.cbp  meshmagick.pc.in
cmake/: FindDirectX.cmake  FindOGRE.cmake  FindPkgMacros.cmake  FindTootle.cmake
docs/: Doxyfile
include/: EditableBone.h  EditableMesh.h  EditableSkeleton.h  InfoTool.h  InfoToolFactory.h  Makefile.am  MeshMagick.h  MeshMagickPrerequisites.h  MeshMergeTool.h  MeshMergeToolFactory.h  MeshUtils.h  MmEditableBone.h  MmEditableMesh.h  MmEditableSkeleton.h  MmInfoTool.h  MmInfoToolFactory.h  MmMeshMergeTool.h  MmMeshMergeToolFactory.h  MmMeshUtils.h  MmOgreEnvironment.h  MmOptimiseTool.h  MmOptimiseToolFactory.h  MmOptionsParser.h  MmRenameToolFactory.h  MmStatefulMeshSerializer.h  MmStatefulSkeletonSerializer.h  MmTool.h  MmToolFactory.h  MmToolManager.h  MmToolUtils.h  MmTootleTool.h  MmTootleToolFactory.h  MmTransformTool.h  MmTransformToolFactory.h  OgreEnvironment.h  OptimiseTool.h  OptimiseToolFactory.h  OptionsParser.h  RenameTool.h  RenameToolFactory.h  (+8 more)
meshmagick.xcodeproj/: project.pbxproj
src/: EditableBone.cpp  EditableMesh.cpp  EditableSkeleton.cpp  InfoTool.cpp  InfoToolFactory.cpp  Makefile.am  MeshMagick.cpp  MeshMergeTool.cpp  MeshMergeToolFactory.cpp  MeshUtils.cpp  MmEditableMesh.cpp  MmEditableSkeleton.cpp  MmInfoTool.cpp  MmMeshMergeTool.cpp  MmMeshUtils.cpp  MmOgreEnvironment.cpp  MmOptimiseTool.cpp  MmOptionsParser.cpp  MmRenameTool.cpp  MmStatefulMeshSerializer.cpp  MmStatefulSkeletonSerializer.cpp  MmToolsUtils.cpp  MmTootleTool.cpp  MmTootleToolFactory.cpp  MmTransformTool.cpp  OgreEnvironment.cpp  OptimiseTool.cpp  OptimiseToolFactory.cpp  OptionsParser.cpp  RenameTool.cpp  RenameToolFactory.cpp  StatefulMeshSerializer.cpp  StatefulSkeletonSerializer.cpp  Tool.cpp  ToolManager.cpp  ToolsUtils.cpp  TransformTool.cpp  TransformToolFactory.cpp  main.cpp
