pkginclude_HEADERS = \
	EditableBone.h \
	EditableMesh.h \
	EditableSkeleton.h \
	InfoToolFactory.h \
	InfoTool.h \
	MeshMagickPrerequisites.h \
	MeshMergeToolFactory.h \
	MeshMergeTool.h \
	MeshUtils.h \
	OgreEnvironment.h \
	OptimiseTool.h \
	OptimiseToolFactory.h \
	OptionsParser.h \
	RenameToolFactory.h \
	RenameTool.h \
	StatefulMeshSerializer.h \
	StatefulSkeletonSerializer.h \
	ToolFactory.h \
	Tool.h \
	ToolManager.h \
	ToolUtils.h \
	TransformToolFactory.h \
	TransformTool.h \
	StatefulMeshSerializer.h \
	StatefulSkeletonSerializer.h 
